2006-02-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Don't use getaddrinfo() etc or try to support IPv6
	on Windows, as they are present by default on XP only. We do want
	to support Windows 2000, too.

2005-12-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-date.c (soup_date_iso8601_parse): fix two bugs in
	the YYYYMMDD case.

	* tests/date.c: add three more ISO 8601 cases, to exercise all the
	code paths.

	#324671, from Emmanuele Bassi
	
2005-11-25  Dan Winship  <danw@novell.com>

	* README: sync to text on wiki, and point to wiki

	* TODO: moved to http://live.gnome.org/LibSoup_2fToDo

2005-11-17  Dan Winship  <danw@novell.com>

	* libsoup/soup-message-io.c (io_cleanup): clear priv->io_data
	right away, to protect against this being re-entered mid-cleanup
	(when we unref the connection). #321208, based on a patch from
	Jedy Wang.

2005-11-16  Dan Winship  <danw@novell.com>

	* libsoup/soup-xmlrpc-message.c
	(soup_xmlrpc_message_start_member): add the "name" element to the
	struct member. #321362, patch from Sebastian Bauer.

2005-11-10  Dan Winship  <danw@novell.com>

	* configure.in: bump version to 2.2.90. This will not be
	officially released, but once these patches have gotten some
	testing they may be pulled up to the gnome-2-12 branch.

	* libsoup/soup-connection.c:
	* libsoup/soup-server.c: 
	* libsoup/soup-session.c: 
	* libsoup/soup-socket.c: add an "async-context" property,
	which gets passed from server to socket, and session to connection
	to socket, allowing async usage outside the main thread. Based on
	patches from Armin Bauer and Jürg Billeter.

	* libsoup/soup-misc.c (soup_add_io_watch, soup_add_idle,
	soup_add_timeout): utility routines to add watches, idles, and
	timeouts to non-default GMainContexts.

	* libsoup/soup-message-io.c (io_write): set the read state
	appropriately after writing a "100 Continue" response
	(io_read): More 100-Continue stuff. I don't think this is quite
	right so it will probably change again later.
